@@ -11,8 +11,9 @@ This version is a complete rewrite of Premake.
 - Upgraded to Lua 5.1.4
 - Many, many bug fixes
 
-RC4 -> 
+RC4 -> Final
 
+- Set Mac OS X linker flags for Code::Blocks
 - Bug 2533504: Files above project root not added to project
 
 RC3 -> RC4
